sqlx_insert/tests/ui/unnamed_fields.stderr
error: proc-macro derive panicked
 --> tests/ui/unnamed_fields.rs:4:10
  |
4 | #[derive(SQLInsert, Clone, Debug)]
  |          ^^^^^^^^^
  |
  = help: message: failed to expand SQLInsert macro: Error("only named struct fields are supported")

warning: unused import: `sqlx::Postgres`
 --> tests/ui/unnamed_fields.rs:2:5
  |
2 | use sqlx::Postgres;
  |     ^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
